--- a/index.html
+++ b/index.html
@@ -2,9 +2,99 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/494839bf8a.js"></script>
+
     <title><3</title>
 </head>
 <body>
-<3
+<div class="main">
+    <div class="nav-bar">
+        <div class="logo">
+            <div class="webbly"> Webbly</div>
+            <div class="oval"></div>
+        </div>
+        <div class="menu-wrapper">
+            <div class="menu">
+                <div class="menu-ul">
+                    <ul>
+                        <li>Home</li>
+                        <li id="doc">Documentation</li>
+                        <li>Forum</li>
+                        <li>Platform</li>
+                    </ul>
+                </div>
+                <div class="form">
+                    <form>
+                        <input class="button-signin" type="button" value="SIGN IN">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="search">
+
+        <div class="search-panel">
+            <div class="header">
+                Knowledge Base
+            </div>
+
+            <div class="inform">
+                All the resources you need to get
+                the most out of our product, quickly and effectively!
+            </div>
+
+            <div class="search-form">
+                <input class="search-input" type="search" placeholder="search...">
+                <div class="ii"><i class="fas fa-search"></i></div>
+            </div>
+            <div class="search-info">Popular searches: <span>flexbox, landing, opacity, higlight</span></div>
+        </div>
+
+        <div class="cards">
+            <div class="card">
+                <div class="reso-icon">
+                    <i class="fas fa-adjust"></i>
+                </div>
+                <div class="reso-head">Resources</div>
+                <div class="check-free-reso">Check our free resources s design
+                    tokens for your next projects
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="reso-icon">
+<!--                    <i class="fas fa-adjust"></i>-->
+                    <i class="fas fa-baseball-ball"></i>
+                </div>
+                <div class="reso-head">Contact us</div>
+                <div class="check-free-reso">Contact our support
+                    team. We’ll do everything to help you.
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="reso-icon">
+                    <i class="fas fa-at"></i>
+<!--                    <i class="fas fa-adjust"></i>-->
+                </div>
+                <div class="reso-head">Forums</div>
+                <div class="check-free-reso">Join a community of
+                    thousands of customers just like you.
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="update">
+        <div class="update-wrapper">
+            <div class="We-have-updated-our">
+                <input class="button" type="button" value="NEW">
+                <div class="we-have-text">We have updated our
+                    documentation, we added a new tutorials section. Check it out!
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
