--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <div class="card">
                 <div class="reso-icon">
-<!--                    <i class="fas fa-adjust"></i>-->
+                    <!--                    <i class="fas fa-adjust"></i>-->
                     <i class="fas fa-baseball-ball"></i>
                 </div>
                 <div class="reso-head">Contact us</div>
@@ -76,7 +76,7 @@
             <div class="card">
                 <div class="reso-icon">
                     <i class="fas fa-at"></i>
-<!--                    <i class="fas fa-adjust"></i>-->
+                    <!--                    <i class="fas fa-adjust"></i>-->
                 </div>
                 <div class="reso-head">Forums</div>
                 <div class="check-free-reso">Join a community of
@@ -90,11 +90,186 @@
             <div class="We-have-updated-our">
                 <input class="button" type="button" value="NEW">
                 <div class="we-have-text">We have updated our
-                    documentation, we added a new tutorials section. Check it out!
+                    documentation, we added a new <em>tutorials section.</em> Check it out!
                 </div>
             </div>
         </div>
     </div>
+    <div class="full-inform">
+
+        <div class="popular-art">
+
+            <div class="head-article">Popular Articles</div>
+
+            <div class="articles">
+                <i class="fas fa-link"></i>
+                Creating a new project
+            </div>
+
+            <div class="articles">
+                <i class="fas fa-link"></i>
+                Export assets & images as a zip file
+            </div>
+
+            <div class="articles">
+                <i class="fas fa-link"></i>
+                Deploy a project to the cloud with aws
+            </div>
+            <div class="articles">
+                <i class="fas fa-link"></i>
+                Create a team and manage access tokens
+            </div>
+            <div class="articles">
+                <i class="fas fa-link"></i>
+                Upgrading your account
+            </div>
+
+        </div>
+        <div class="latest-tutorials">
+            <div class="head-article">
+                Latest Tutorials
+            </div>
+
+            <div class="articles">
+                <i class="fas fa-pencil-alt"></i>
+                Design and build a web app from scratch
+            </div>
+
+            <div class="articles">
+                <i class="fas fa-pencil-alt"></i>
+                How to use sketch symbols
+            </div>
+
+            <div class="articles">
+                <i class="fas fa-pencil-alt"></i>
+                Node authentication with passport
+            </div>
+
+            <div class="articles">
+                <i class="fas fa-pencil-alt"></i>
+                React Native to do app
+            </div>
+
+            <div class="articles">
+                <i class="fas fa-pencil-alt"></i>
+                How to set up a continuous integration
+            </div>
+
+        </div>
+        <div class="form-our-forms">
+            <div class="head-article">From our Forums</div>
+
+            <div class="articles">
+                <i class="far fa-comment"></i> How to set up custom dns? by:<a href="#"> James Gordon</a>
+            </div>
+
+            <div class="articles">
+                <i class="far fa-comment"></i> Check out my latest creation :D by:<a href="#"> Neville Griff</a>
+            </div>
+
+            <div class="articles">
+                <i class="far fa-comment"></i> Is Webble down for you guys? by:<a href="#"> Neville Griff</a>
+            </div>
+
+            <div class="articles">
+                <i class="far fa-comment"></i> Welcome to the new website! by:<a href="#"> Daya Chitan</a>
+            </div>
+
+            <div class="articles">
+                <i class="far fa-comment"></i> How can i add icons to my build? by:<a href="#"> Diane La..</a>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="sign-up">
+        <div class="keep-up">Keep up with our updates</div>
+        <div class="join-our">Join our weekly newsletter and get world class tutorials and articles<br> on <em
+                class="design">design</em>, <em class="coding">coding</em> and <em class="marketing">marketing</em>
+        </div>
+
+        <div class="email">
+
+            <div class="enter-you-email">
+                Enter you email
+            </div>
+
+            <div class="sign-up-button-wrapper">
+                <input class="sign-up-button" type="button" value="SIGN UP">
+            </div>
+        </div>
+    </div>
+
+
+    <div class="rectangle-wrapper">
+        <div class="rectangle">
+            <div class="logo2">
+                <div class="webbly"> Webbly</div>
+                <div class="oval"></div>
+                <div class="icon-i-w"><i class="far fa-caret-square-down"></i></div>
+                <div class="icon-i-w"><i class="far fa-caret-square-down"></i></div>
+                <div class="icon-i-w"><i class="far fa-caret-square-down"></i></div>
+            </div>
+
+            <div class="company">
+
+                <div class="header-name">Company</div>
+
+                <div class="company-inform">
+                    <div class="articles2">
+                        About us
+                    </div>
+                    <div class="articles2">
+                        Blog
+                    </div>
+                    <div class="articles2">
+                        Contact
+                    </div>
+                    <div class="articles2">
+                        Work for us
+                    </div>
+                </div>
+            </div>
+            <div class="product">
+                <div class="header-name">Product</div>
+
+                <div class="company-inform">
+                    <div class="articles2">
+                        Trial
+                    </div>
+                    <div class="articles2">
+                        Pricing
+                    </div>
+                    <div class="articles2">
+                        Teams
+                    </div>
+                </div>
+
+            </div>
+            <div class="resources">
+                <div class="header-name">Recources</div>
+
+                <div class="company-inform">
+                    <div class="articles2">
+                        User guides
+                    </div>
+                    <div class="articles2">
+                        Support
+                    </div>
+                    <div class="articles2">
+                        Documentation
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="footer">
+        <div class="footer-webble">© 2019 Webble | A product by Piksl</div>
+        <div class="footer-term">Terms & Conditions ✦  Privacy Policy</div>
+    </div>
+
+</div>
 </div>
 </body>
 </html>
