--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/494839bf8a.js"></script>
-
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <title><3</title>
 </head>
 <body>
@@ -181,6 +181,118 @@
 
         </div>
     </div>
+    <div class="contetnt">
+        <div class="basics">Basics
+            <div class="basics-line"></div>
+        </div>
+        <div class="get-start">
+            <div class="inform-basics">
+                <div class="get-started-text"> Getting started</div>
+                <div class="get-introduced-to-th">
+                    Get introduced to the basic concepts of our editor, how to create
+                    projects and navigate between all
+                    the platform functionalities.
+                </div>
+
+                <div class="rec"></div>
+
+                <div class="three">5 authors, 13 entries</div>
+            </div>
+
+            <div class="inform-basics">
+                <div class="get-started-text">Account & Billing</div>
+                <div class="get-introduced-to-th">
+                    Guides on how to update, upgrade & manage your profile.
+                    You’ll find also more informations on teams and projects sharing.
+                </div>
+                <div class="rec"></div>
+                <div class="three">3 authors, 3 entries</div>
+            </div>
+        </div>
+
+
+        <div class="design1">
+            <div class="design2">Design
+                <div class="basics-line"></div>
+            </div>
+            <div class="brows-all">Brows all</div>
+        </div>
+        <div class="get-start">
+            <div class="inform-basics">
+                <div class="get-started-text">Sketch symbols</div>
+                <div class="get-introduced-to-th">
+                    Get started with Sketch symbols!
+                    Learn the basics, and how you can get
+                    up to speed with Symbols overrides ..
+                </div>
+
+                <div class="rec"></div>
+
+                <div class="three">5 authors, 13 entries</div>
+            </div>
+            <div class="inform-basics">
+                <div class="get-started-text">Design tools</div>
+                <div class="get-introduced-to-th">
+                    Tutorials covering different design tools,
+                    from Sketch, Xd to Figma.
+                    You'll learn what makes them different and how can you..
+                </div>
+
+                <div class="rec"></div>
+
+                <div class="three">5 authors, 13 entries</div>
+            </div>
+            <div class="inform-basics">
+                <div class="get-started-text">User Experience</div>
+                <div class="get-introduced-to-th">
+                    Learn the different UX techniques,
+                    and follow in these tutorials with the best
+                    practices and patterns to produce world class apps
+                </div>
+                <div class="rec"></div>
+                <div class="three">3 authors, 3 entries</div>
+            </div>
+        </div>
+
+        <div class="design1">
+            <div class="design2">Development
+                <div class="basics-line"></div>
+            </div>
+        </div>
+        <div class="get-start">
+            <div class="inform-basics">
+                <div class="get-started-text">Frontend</div>
+                <div class="get-introduced-to-th">Learn frontend development tools and
+                    technologies with these multiple hands-on
+                    tutorials and guides.
+                </div>
+
+                <div class="rec"></div>
+
+                <div class="three">6 authors, 12 entries</div>
+            </div>
+            <div class="inform-basics">
+                <div class="get-started-text">Backend</div>
+                <div class="get-introduced-to-th">From Node to Wordpress Rest APIs,
+                    these tutorials cover everything you'll
+                    ever need to create backend systems for you apps.
+                </div>
+
+                <div class="rec"></div>
+
+                <div class="three">5 authors, 13 entries</div>
+            </div>
+            <div class="inform-basics">
+                <div class="get-started-text">Mobile</div>
+                <div class="get-introduced-to-th">
+                    Learn mobile technologies, we'll start with React Native and slowly move to native iOS and Android
+                    development with Swift and ..
+                </div>
+                <div class="rec"></div>
+                <div class="three">2 authors, 19 entries</div>
+            </div>
+        </div>
+    </div>
 
     <div class="sign-up">
         <div class="keep-up">Keep up with our updates</div>
@@ -264,10 +376,124 @@
         </div>
 
     </div>
+
+
     <div class="footer">
         <div class="footer-webble">© 2019 Webble | A product by Piksl</div>
-        <div class="footer-term">Terms & Conditions ✦  Privacy Policy</div>
+        <div class="footer-term">Terms & Conditions ✦ Privacy Policy</div>
     </div>
+
+
+    <!--    <div class="contetnt">-->
+    <!--        <div class="basics">Basics-->
+    <!--            <div class="basics-line"></div>-->
+    <!--        </div>-->
+    <!--        <div class="get-start">-->
+    <!--            <div class="inform-basics">-->
+    <!--                <div class="get-started-text"> Getting started</div>-->
+    <!--                <div class="get-introduced-to-th">-->
+    <!--                    Get introduced to the basic concepts of our editor, how to create-->
+    <!--                    projects and navigate between all-->
+    <!--                    the platform functionalities.-->
+    <!--                </div>-->
+
+    <!--                <div class="rec"></div>-->
+
+    <!--                <div class="three">5 authors, 13 entries</div>-->
+    <!--            </div>-->
+
+    <!--            <div class="inform-basics">-->
+    <!--                <div class="get-started-text">Account & Billing</div>-->
+    <!--                <div class="get-introduced-to-th">-->
+    <!--                    Guides on how to update, upgrade & manage your profile.-->
+    <!--                    You’ll find also more informations on teams and projects sharing.-->
+    <!--                </div>-->
+    <!--                <div class="rec"></div>-->
+    <!--                <div class="three">3 authors, 3 entries</div>-->
+    <!--            </div>-->
+    <!--        </div>-->
+
+
+    <!--        <div class="design1">-->
+    <!--            <div class="design2">Design-->
+    <!--                <div class="basics-line"></div>-->
+    <!--            </div>-->
+    <!--            <div class="brows-all">Brows all</div>-->
+    <!--        </div>-->
+    <!--        <div class="get-start">-->
+    <!--            <div class="inform-basics">-->
+    <!--                <div class="get-started-text">Sketch symbols</div>-->
+    <!--                <div class="get-introduced-to-th">-->
+    <!--                    Get started with Sketch symbols!-->
+    <!--                    Learn the basics, and how you can get-->
+    <!--                    up to speed with Symbols overrides ..-->
+    <!--                </div>-->
+
+    <!--                <div class="rec"></div>-->
+
+    <!--                <div class="three">5 authors, 13 entries</div>-->
+    <!--            </div>-->
+    <!--            <div class="inform-basics">-->
+    <!--                <div class="get-started-text">Design tools</div>-->
+    <!--                <div class="get-introduced-to-th">-->
+    <!--                    Tutorials covering different design tools,-->
+    <!--                    from Sketch, Xd to Figma.-->
+    <!--                    You'll learn what makes them different and how can you..-->
+    <!--                </div>-->
+
+    <!--                <div class="rec"></div>-->
+
+    <!--                <div class="three">5 authors, 13 entries</div>-->
+    <!--            </div>-->
+    <!--            <div class="inform-basics">-->
+    <!--                <div class="get-started-text">User Experience</div>-->
+    <!--                <div class="get-introduced-to-th">-->
+    <!--                    Learn the different UX techniques,-->
+    <!--                    and follow in these tutorials with the best-->
+    <!--                    practices and patterns to produce world class apps-->
+    <!--                </div>-->
+    <!--                <div class="rec"></div>-->
+    <!--                <div class="three">3 authors, 3 entries</div>-->
+    <!--            </div>-->
+    <!--        </div>-->
+
+    <!--        <div class="design1">-->
+    <!--            <div class="design2">Development-->
+    <!--                <div class="basics-line"></div>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--        <div class="get-start">-->
+    <!--            <div class="inform-basics">-->
+    <!--                <div class="get-started-text">Frontend</div>-->
+    <!--                <div class="get-introduced-to-th">Learn frontend development tools and-->
+    <!--                    technologies with these multiple hands-on-->
+    <!--                    tutorials and guides.</div>-->
+
+    <!--                <div class="rec"></div>-->
+
+    <!--                <div class="three">6 authors, 12 entries</div>-->
+    <!--            </div>-->
+    <!--            <div class="inform-basics">-->
+    <!--                <div class="get-started-text">Backend</div>-->
+    <!--                <div class="get-introduced-to-th">From Node to Wordpress Rest APIs,-->
+    <!--                    these tutorials cover everything you'll-->
+    <!--                    ever need to create backend systems for you apps.</div>-->
+
+    <!--                <div class="rec"></div>-->
+
+    <!--                <div class="three">5 authors, 13 entries</div>-->
+    <!--            </div>-->
+    <!--            <div class="inform-basics">-->
+    <!--                <div class="get-started-text">Mobile</div>-->
+    <!--                <div class="get-introduced-to-th">-->
+    <!--                    Learn mobile technologies, we'll start with React Native and slowly move to native iOS and Android development with Swift and ..-->
+    <!--                </div>-->
+    <!--                <div class="rec"></div>-->
+    <!--                <div class="three">2 authors, 19 entries</div>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--    </div>-->
+
 
 </div>
 </div>
