--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/494839bf8a.js"></script>
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><3</title>
 </head>
 <body>
@@ -125,6 +125,7 @@
             </div>
 
         </div>
+
         <div class="latest-tutorials">
             <div class="head-article">
                 Latest Tutorials
@@ -181,6 +182,8 @@
 
         </div>
     </div>
+
+
     <div class="contetnt">
         <div class="basics">Basics
             <div class="basics-line"></div>
@@ -209,7 +212,6 @@
                 <div class="three">3 authors, 3 entries</div>
             </div>
         </div>
-
 
         <div class="design1">
             <div class="design2">Design
@@ -253,7 +255,6 @@
                 <div class="three">3 authors, 3 entries</div>
             </div>
         </div>
-
         <div class="design1">
             <div class="design2">Development
                 <div class="basics-line"></div>
@@ -282,6 +283,7 @@
 
                 <div class="three">5 authors, 13 entries</div>
             </div>
+
             <div class="inform-basics">
                 <div class="get-started-text">Mobile</div>
                 <div class="get-introduced-to-th">
@@ -294,208 +296,92 @@
         </div>
     </div>
 
-    <div class="sign-up">
-        <div class="keep-up">Keep up with our updates</div>
-        <div class="join-our">Join our weekly newsletter and get world class tutorials and articles<br> on <em
-                class="design">design</em>, <em class="coding">coding</em> and <em class="marketing">marketing</em>
-        </div>
-
-        <div class="email">
-
-            <div class="enter-you-email">
-                Enter you email
-            </div>
-
-            <div class="sign-up-button-wrapper">
-                <input class="sign-up-button" type="button" value="SIGN UP">
-            </div>
-        </div>
-    </div>
-
-
-    <div class="rectangle-wrapper">
-        <div class="rectangle">
-            <div class="logo2">
-                <div class="webbly"> Webbly</div>
-                <div class="oval"></div>
-                <div class="icon-i-w"><i class="far fa-caret-square-down"></i></div>
-                <div class="icon-i-w"><i class="far fa-caret-square-down"></i></div>
-                <div class="icon-i-w"><i class="far fa-caret-square-down"></i></div>
-            </div>
-
-            <div class="company">
-
-                <div class="header-name">Company</div>
-
-                <div class="company-inform">
-                    <div class="articles2">
-                        About us
-                    </div>
-                    <div class="articles2">
-                        Blog
-                    </div>
-                    <div class="articles2">
-                        Contact
-                    </div>
-                    <div class="articles2">
-                        Work for us
-                    </div>
-                </div>
-            </div>
-            <div class="product">
-                <div class="header-name">Product</div>
-
-                <div class="company-inform">
-                    <div class="articles2">
-                        Trial
-                    </div>
-                    <div class="articles2">
-                        Pricing
-                    </div>
-                    <div class="articles2">
-                        Teams
-                    </div>
-                </div>
-
-            </div>
-            <div class="resources">
-                <div class="header-name">Recources</div>
-
-                <div class="company-inform">
-                    <div class="articles2">
-                        User guides
-                    </div>
-                    <div class="articles2">
-                        Support
-                    </div>
-                    <div class="articles2">
-                        Documentation
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-
-    <div class="footer">
-        <div class="footer-webble">© 2019 Webble | A product by Piksl</div>
-        <div class="footer-term">Terms & Conditions ✦ Privacy Policy</div>
-    </div>
-
-
-    <!--    <div class="contetnt">-->
-    <!--        <div class="basics">Basics-->
-    <!--            <div class="basics-line"></div>-->
-    <!--        </div>-->
-    <!--        <div class="get-start">-->
-    <!--            <div class="inform-basics">-->
-    <!--                <div class="get-started-text"> Getting started</div>-->
-    <!--                <div class="get-introduced-to-th">-->
-    <!--                    Get introduced to the basic concepts of our editor, how to create-->
-    <!--                    projects and navigate between all-->
-    <!--                    the platform functionalities.-->
-    <!--                </div>-->
-
-    <!--                <div class="rec"></div>-->
-
-    <!--                <div class="three">5 authors, 13 entries</div>-->
-    <!--            </div>-->
-
-    <!--            <div class="inform-basics">-->
-    <!--                <div class="get-started-text">Account & Billing</div>-->
-    <!--                <div class="get-introduced-to-th">-->
-    <!--                    Guides on how to update, upgrade & manage your profile.-->
-    <!--                    You’ll find also more informations on teams and projects sharing.-->
-    <!--                </div>-->
-    <!--                <div class="rec"></div>-->
-    <!--                <div class="three">3 authors, 3 entries</div>-->
-    <!--            </div>-->
+    <!--    <div class="sign-up">-->
+    <!--        <div class="keep-up">Keep up with our updates</div>-->
+    <!--        <div class="join-our">Join our weekly newsletter and get world class tutorials and articles<br> on <em-->
+    <!--                class="design">design</em>, <em class="coding">coding</em> and <em class="marketing">marketing</em>-->
     <!--        </div>-->
 
+    <!--&lt;!&ndash;        <div class="email">&ndash;&gt;-->
 
-    <!--        <div class="design1">-->
-    <!--            <div class="design2">Design-->
-    <!--                <div class="basics-line"></div>-->
-    <!--            </div>-->
-    <!--            <div class="brows-all">Brows all</div>-->
-    <!--        </div>-->
-    <!--        <div class="get-start">-->
-    <!--            <div class="inform-basics">-->
-    <!--                <div class="get-started-text">Sketch symbols</div>-->
-    <!--                <div class="get-introduced-to-th">-->
-    <!--                    Get started with Sketch symbols!-->
-    <!--                    Learn the basics, and how you can get-->
-    <!--                    up to speed with Symbols overrides ..-->
-    <!--                </div>-->
+    <!--&lt;!&ndash;            <div class="enter-you-email">&ndash;&gt;-->
+    <!--&lt;!&ndash;                Enter you email&ndash;&gt;-->
+    <!--&lt;!&ndash;            </div>&ndash;&gt;-->
 
-    <!--                <div class="rec"></div>-->
+    <!--&lt;!&ndash;            <div class="sign-up-button-wrapper">&ndash;&gt;-->
+    <!--&lt;!&ndash;                <input class="sign-up-button" type="button" value="SIGN UP">&ndash;&gt;-->
+    <!--&lt;!&ndash;            </div>&ndash;&gt;-->
+    <!--&lt;!&ndash;        </div>&ndash;&gt;-->
+    <!--&lt;!&ndash;    </div>&ndash;&gt;-->
+    <!--&lt;!&ndash;    <div class="rectangle-wrapper">&ndash;&gt;-->
+    <!--&lt;!&ndash;        <div class="rectangle">&ndash;&gt;-->
+    <!--&lt;!&ndash;            <div class="logo2">&ndash;&gt;-->
+    <!--&lt;!&ndash;                <div class="webbly"> Webbly</div>&ndash;&gt;-->
+    <!--&lt;!&ndash;                <div class="oval"></div>&ndash;&gt;-->
+    <!--&lt;!&ndash;                <div class="icon-i-w"><i class="far fa-caret-square-down"></i></div>&ndash;&gt;-->
+    <!--&lt;!&ndash;                <div class="icon-i-w"><i class="far fa-caret-square-down"></i></div>&ndash;&gt;-->
+    <!--&lt;!&ndash;                <div class="icon-i-w"><i class="far fa-caret-square-down"></i></div>&ndash;&gt;-->
+    <!--&lt;!&ndash;            </div>&ndash;&gt;-->
 
-    <!--                <div class="three">5 authors, 13 entries</div>-->
-    <!--            </div>-->
-    <!--            <div class="inform-basics">-->
-    <!--                <div class="get-started-text">Design tools</div>-->
-    <!--                <div class="get-introduced-to-th">-->
-    <!--                    Tutorials covering different design tools,-->
-    <!--                    from Sketch, Xd to Figma.-->
-    <!--                    You'll learn what makes them different and how can you..-->
-    <!--                </div>-->
+    <!--&lt;!&ndash;            <div class="company">&ndash;&gt;-->
 
-    <!--                <div class="rec"></div>-->
+    <!--&lt;!&ndash;                <div class="header-name">Company</div>&ndash;&gt;-->
 
-    <!--                <div class="three">5 authors, 13 entries</div>-->
-    <!--            </div>-->
-    <!--            <div class="inform-basics">-->
-    <!--                <div class="get-started-text">User Experience</div>-->
-    <!--                <div class="get-introduced-to-th">-->
-    <!--                    Learn the different UX techniques,-->
-    <!--                    and follow in these tutorials with the best-->
-    <!--                    practices and patterns to produce world class apps-->
-    <!--                </div>-->
-    <!--                <div class="rec"></div>-->
-    <!--                <div class="three">3 authors, 3 entries</div>-->
-    <!--            </div>-->
-    <!--        </div>-->
+    <!--&lt;!&ndash;                <div class="company-inform">&ndash;&gt;-->
+    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
+    <!--&lt;!&ndash;                        About us&ndash;&gt;-->
+    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
+    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
+    <!--&lt;!&ndash;                        Blog&ndash;&gt;-->
+    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
+    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
+    <!--&lt;!&ndash;                        Contact&ndash;&gt;-->
+    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
+    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
+    <!--&lt;!&ndash;                        Work for us&ndash;&gt;-->
+    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
+    <!--&lt;!&ndash;                </div>&ndash;&gt;-->
+    <!--&lt;!&ndash;            </div>&ndash;&gt;-->
+    <!--&lt;!&ndash;            <div class="product">&ndash;&gt;-->
+    <!--&lt;!&ndash;                <div class="header-name">Product</div>&ndash;&gt;-->
 
-    <!--        <div class="design1">-->
-    <!--            <div class="design2">Development-->
-    <!--                <div class="basics-line"></div>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--        <div class="get-start">-->
-    <!--            <div class="inform-basics">-->
-    <!--                <div class="get-started-text">Frontend</div>-->
-    <!--                <div class="get-introduced-to-th">Learn frontend development tools and-->
-    <!--                    technologies with these multiple hands-on-->
-    <!--                    tutorials and guides.</div>-->
+    <!--&lt;!&ndash;                <div class="company-inform">&ndash;&gt;-->
+    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
+    <!--&lt;!&ndash;                        Trial&ndash;&gt;-->
+    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
+    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
+    <!--&lt;!&ndash;                        Pricing&ndash;&gt;-->
+    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
+    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
+    <!--&lt;!&ndash;                        Teams&ndash;&gt;-->
+    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
+    <!--&lt;!&ndash;                </div>&ndash;&gt;-->
 
-    <!--                <div class="rec"></div>-->
+    <!--&lt;!&ndash;            </div>&ndash;&gt;-->
+    <!--&lt;!&ndash;            <div class="resources">&ndash;&gt;-->
+    <!--&lt;!&ndash;                <div class="header-name">Recources</div>&ndash;&gt;-->
 
-    <!--                <div class="three">6 authors, 12 entries</div>-->
-    <!--            </div>-->
-    <!--            <div class="inform-basics">-->
-    <!--                <div class="get-started-text">Backend</div>-->
-    <!--                <div class="get-introduced-to-th">From Node to Wordpress Rest APIs,-->
-    <!--                    these tutorials cover everything you'll-->
-    <!--                    ever need to create backend systems for you apps.</div>-->
+    <!--&lt;!&ndash;                <div class="company-inform">&ndash;&gt;-->
+    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
+    <!--&lt;!&ndash;                        User guides&ndash;&gt;-->
+    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
+    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
+    <!--&lt;!&ndash;                        Support&ndash;&gt;-->
+    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
+    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
+    <!--&lt;!&ndash;                        Documentation&ndash;&gt;-->
+    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
+    <!--&lt;!&ndash;                </div>&ndash;&gt;-->
+    <!--&lt;!&ndash;            </div>&ndash;&gt;-->
+    <!--&lt;!&ndash;        </div>&ndash;&gt;-->
 
-    <!--                <div class="rec"></div>-->
-
-    <!--                <div class="three">5 authors, 13 entries</div>-->
-    <!--            </div>-->
-    <!--            <div class="inform-basics">-->
-    <!--                <div class="get-started-text">Mobile</div>-->
-    <!--                <div class="get-introduced-to-th">-->
-    <!--                    Learn mobile technologies, we'll start with React Native and slowly move to native iOS and Android development with Swift and ..-->
-    <!--                </div>-->
-    <!--                <div class="rec"></div>-->
-    <!--                <div class="three">2 authors, 19 entries</div>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--    </div>-->
-
-
-</div>
-</div>
+    <!--&lt;!&ndash;    </div>&ndash;&gt;-->
+    <!--&lt;!&ndash;    <div class="footer">&ndash;&gt;-->
+    <!--&lt;!&ndash;        <div class="footer-webble">© 2019 Webble | A product by Piksl</div>&ndash;&gt;-->
+    <!--&lt;!&ndash;        <div class="footer-term">Terms & Conditions ✦ Privacy Policy</div>&ndash;&gt;-->
+    <!--&lt;!&ndash;    </div>&ndash;&gt;-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
 </body>
 </html>
